fix: finally fixed overflows

--- a/src/Components/Card/card.css
+++ b/src/Components/Card/card.css
@@ -8,6 +8,8 @@
     text-align: center;
     font-weight: 700;
     font-size: 18px;
+}
+.card__title p {
     overflow: hidden;
 }
 .card__content {
